--- a/roles/vscode_tunnels_role/tasks/main.yml
+++ b/roles/vscode_tunnels_role/tasks/main.yml
@@ -6,6 +6,12 @@
     url: "https://update.code.visualstudio.com/{{ vscode_version }}/linux-rpm-x64/stable"
     dest: /tmp
 
+- name: Import microsoft GPG key
+  ansible.builtin.rpm_key:
+    state: present
+    key: https://packages.microsoft.com/keys/microsoft.asc
+
+
 - name: Install the vscode {{vscode_version}} rpm from a local file
   ansible.builtin.yum:
     name: /tmp/code-{{ vscode_version }}-1673284922.el7.x86_64.rpm
