--- a/roles/vscode_tunnels_role/tasks/main.yml
+++ b/roles/vscode_tunnels_role/tasks/main.yml
@@ -15,3 +15,13 @@
   ansible.builtin.yum:
     name: /tmp/code-{{ vscode_version }}-1673284922.el7.x86_64.rpm
     state: present
+
+- name: Enable vscode tunnels from CLI 
+  ansible.builtin.shell:
+    cmd: code tunnel
+  register: vscode_tunnel_link
+
+- name: Print vscode tunnels link
+  ansible.builtin.debug:
+    var: vscode_tunnel_link
+
