--- a/roles/vscode_tunnels_role/tasks/main.yml
+++ b/roles/vscode_tunnels_role/tasks/main.yml
@@ -2,16 +2,19 @@
 # tasks file for vscode_tunnels_role
 
 - name: Download vscode {{vscode_version}} rpm package    
+  become: yes
   ansible.builtin.get_url:
     url: "https://update.code.visualstudio.com/{{ vscode_version }}/linux-rpm-x64/stable"
     dest: /tmp
 
 - name: Import microsoft GPG key
+  become: yes
   ansible.builtin.rpm_key:
     state: present
     key: https://packages.microsoft.com/keys/microsoft.asc
 
 - name: Install the vscode {{vscode_version}} rpm from a local file
+  become: yes
   ansible.builtin.yum:
     name: /tmp/code-{{ vscode_version }}-1673284922.el7.x86_64.rpm
     state: present
