Changed package manager from yum to dnf for installing tldr

--- a/roles/vscode_tunnels_role/tasks/main.yml
+++ b/roles/vscode_tunnels_role/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
-- name: install tldr yum 
+- name: install tldr dnf 
   become: yes
-  ansible.builtin.yum:
+  ansible.builtin.dnf:
     name: tldr
     state: present
 
