--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,6 @@
 ---  
 - name: Install VsCode version "{{ vscode_version }}"
-  hosts: all
+  hosts: localhost
   gather_facts: false
   vars_prompt:
     - name: vscode_tunnel_name #variable
