Add custom code tunnel to VsCode installation

--- a/playbook.yml
+++ b/playbook.yml
@@ -1,5 +1,5 @@
 ---  
-- name: Install VsCode version "{{ vscode_version }}"
+- name: Install VsCode version "{{ vscode_version }}" & start custom code tunnel
   hosts: localhost
   gather_facts: false
   vars_prompt:
