Add roles and tasks for installing, starting, and stopping VS Code tunnels

--- a/2_start_tunnel_vscode.yml
+++ b/2_start_tunnel_vscode.yml
@@ -7,4 +7,4 @@
       prompt: "Enter the name for the Visual Studio Code tunnel: "
       private: false
   roles: 
-    - vscode_tunnels_role
+    - stop_vscode_tunnels_role
